# src/notification/dto/index.ts
@@ -1,0 +1,6 @@
+export {
+  NotificationEventType,
+  WaitlistNotificationPayload,
+  NotificationRequest,
+  NotificationResponse,
+} from "./notification-event.dto";
